# ckTON

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  prep.sh  test.json  tsconfig.json
src/ckTon_backend/: Cargo.toml
src/ckTon_frontend/: package.json
src/ckTon_frontend/src/: App.vue
src/ckton_dashboard/: index.html  package.json  tsconfig.json  vite.config.js
src/ckton_dashboard/public/: .ic-assets.json5
src/ckton_dashboard/src/: App.vue  config.js  main.js
src/ckton_minter/: Cargo.toml  build.rs  ckton_minter.did
src/ckton_minter/src/: consts.rs  ledger_args.rs  lib.rs  tests.rs  ton_api.rs  types.rs  utils.rs
