[package]
name = "ckton_minter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
icrc-ledger-types = "0.1.8"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
base64 = "0.22.1"
ic-ton-lib.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"


[build-dependencies]
dotenv = "0.15.0"

[dev-dependencies]
pocket-ic = "6.0.0"
reqwest = { version = "0.12", features = ["json"] }
# secp256k1 = { version = "0.30.0", features = ["rand"] }
